# peddler

./: .env.example  .gitignore  README.md  create_test_users.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  notes.txt  tree.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  generate_secret.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 022131bd4110_initial_migration.py  12d027525179_initial_migration.py  168fcdf03f2f_initial_migration.py  20c7a88eb805_add_full_text_search.py  2806bc89ba00_add_search_trigger.py  2a33698334c5_add_voice_message_support.py  446bd372e8a3_change_filesize_to_bigint.py  637d6dee3223_add_media_fields.py  6e5d186ab445_add_invite_token.py  89713b696c15_initial_schema.py  9f4e4d2df9fa_add_user_online_status.py  a9268876d318_initial_migration.py  bdf6683386bb_add_media_fields2.py  d0c784d7d18f_add_description_to_chats.py  f03f61a79367_add_user_profile_fields.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: auth.py  chats.py  messages.py  tus.py  users.py
backend/app/core/: exceptions.py
backend/app/models/: __init__.py  base.py  chat.py  message.py  user.py
backend/app/repositories/: chat_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: __init__.py  chat.py  message.py  tus.py  user.py
backend/app/services/: chat_service.py  message_service.py  user_service.py
backend/app/tasks/: __init__.py  avatar_tasks.py  media_tasks.py  message_tasks.py
backend/app/utils/: security.py
backend/app/ws/: __init__.py  auth.py  events.py  globals.py  manager.py  pubsub.py  rate_limiter.py  router.py  test2_websocket.py  test_websocket.py
backend/tests/: seed_messages.py
frontend/: Dockerfile  Dockerfile.prod  README.md  capacitor.config.ts  index.html  (+6 more)
(+89 files in other folders)
